--- a/src/dashboard/src/templates/archival_storage/list.html
+++ b/src/dashboard/src/templates/archival_storage/list.html
@@ -96,7 +96,11 @@
       <tbody>
         {% for item in aips %}
           <tr>
-            <td><a href="{% url 'view_aip' item.uuid %}">{{ item.name }}</a></td>
+              {% if item.encrypted %}
+                <td><a href="{% url 'view_aip' item.uuid %}">{{ item.name }} (encrypted)</a></td>
+              {% else %}
+                <td><a href="{% url 'view_aip' item.uuid %}">{{ item.name }}</a></td>
+              {% endif %}
             <td class="size">{{ item.size }}</td>
             <td class="uuid"><a href="{% url 'view_aip' item.uuid %}">{{ item.uuid }}</a></td>
             <td><span class="timestamp">{{ item.date }}</span></td>
