Added asterisks to required fields in handle config form

--- a/src/dashboard/src/media/css/style.css
+++ b/src/dashboard/src/media/css/style.css
@@ -776,3 +776,7 @@ textarea.command {
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
+label.required-field:after {
+  content: '*'
+}
