Change reference to old assets

--- a/src/dashboard/src/templates/appraisal/appraisal.html
+++ b/src/dashboard/src/templates/appraisal/appraisal.html
@@ -16,7 +16,7 @@
 {% block js %}
 <script src="{{ STATIC_URL }}js/advanced-search-query-creator.js"></script>
 <script src="{{ STATIC_URL }}js/ingest/backlog.js"></script>
-<script src="{{ STATIC_URL }}js/appraisal_tab.js"></script>
+<script src="{{ STATIC_URL }}js/build/appraisal_tab.js"></script>
 {% endblock %}
 
 {% block content %}
